--- a/zero/nav/index.html
+++ b/zero/nav/index.html
@@ -2,52 +2,61 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>零基础班链接导航</title>
+  <title>零基础导航</title>
+  <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="header">
-    <h1><img src="imgs/logo.png" alt="知行社Logo" class="logo">零基础班链接导航</h1>
-  </div>
-  <div class="main" id="app" v-cloak>
-    <nav class="sidebar">
-      <ul class="nav" >
-        <li class="nav__item" :class="{'nav__item--current': nav.id == current}" v-for="nav in navs" :key="nav.id" @click="switchTab(nav.id)">
-          <a :href="nav.url? nav.url : 'javascript:void(0)'" :target="nav.url ? '_blank' : '_self'">{{nav.name}}</a>
-        </li>
-      </ul>
-    </nav>
-    <div class="main__detail">
-      <div class="content__detail" v-for="nav in navs" v-if="nav.id == current">
-        <div v-if="nav.detail && nav.detail.length > 0">
-          <!-- 带分类的 -->
-          <div v-if="nav.detail[0].type" v-for="type in nav.detail">
-            <h2 class="type-name">{{type.type}}</h2>
-            <ol class="cards">
-              <li class="card" v-for="item in type.content" v-show="nav.id == current" :key="item.id">
-                <a :href="item.url" target="_blank">{{item.name}} {{item.url ? '' : '(未完成)'}}</a>
-              </li>
-            </ol>
-          </div>
-          <!-- 不带分类的 -->
-          <div v-if="!nav.detail[0].type">
-            <ol class="cards">
-              <li class="card" v-for="item in nav.detail" v-show="nav.id == current" :key="item.id">
-                <a :href="item.url" target="_blank">{{item.name}} {{item.url ? '' : '(未完成)'}}</a>
-              </li>
-            </ol>
-          </div>
-        </div>
+  <div id="app" v-cloak>
+    <div class="header">
+      <h1><img src="imgs/logo.png" alt="知行社Logo" class="logo">零基础导航</h1>
+      <a href="javascript:void(0);" class="toggle-btn" @click="toggleNav">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
+    </div>
+    <div class="main">
+      <nav class="sidebar" v-show="isShowNav">
+        <ul class="nav" >
+          <li class="nav__item" :class="{'nav__item--current': nav.id == current}" v-for="nav in navs" :key="nav.id" @click="switchTab(nav.id)">
+            <a :href="nav.url? nav.url : 'javascript:void(0)'" :target="nav.url ? '_blank' : '_self'">{{nav.name}}</a>
+          </li>
+        </ul>
+      </nav>
 
-        <div v-if="nav.id == 'contract'">
-          <dl>
-            <dt>微信:</dt>
-            <dd><img src="imgs/wechat.png" alt=""></dd>
-          </dl>
-          <dl>
-            <dt>手机号: 13913134070</dt>
-            <dd></dd>
-          </dl>
+      <div class="main__detail">
+        <div class="content__detail" v-for="nav in navs" v-if="nav.id == current">
+          <div v-if="nav.detail && nav.detail.length > 0">
+            <!-- 带分类的 -->
+            <div v-if="nav.detail[0].type" v-for="type in nav.detail">
+              <h2 class="type-name">{{type.type}}</h2>
+              <ol class="cards">
+                <li class="card" v-for="item in type.content" v-show="nav.id == current" :key="item.id">
+                  <a :href="item.url" target="_blank">{{item.name}} {{item.url ? '' : '(未完成)'}}</a>
+                </li>
+              </ol>
+            </div>
+            <!-- 不带分类的 -->
+            <div v-if="!nav.detail[0].type">
+              <ol class="cards">
+                <li class="card" v-for="item in nav.detail" v-show="nav.id == current" :key="item.id">
+                  <a :href="item.url" target="_blank">{{item.name}} {{item.url ? '' : '(未完成)'}}</a>
+                </li>
+              </ol>
+            </div>
+          </div>
+
+          <div v-if="nav.id == 'contract'">
+            <dl>
+              <dt>微信:</dt>
+              <dd><img src="imgs/wechat.png" alt="wechat" class="wechat"></dd>
+            </dl>
+            <dl>
+              <dt>手机号: 13913134070</dt>
+              <dd></dd>
+            </dl>
+          </div>
         </div>
       </div>
     </div>
