--- a/zero/nav/index.html
+++ b/zero/nav/index.html
@@ -64,5 +64,14 @@
   <!-- <script></script> -->
   <script src="https://unpkg.com/vue@2.4.2"></script>
   <script src="index.js"></script>
+  <script>
+  var _hmt = _hmt || [];
+  (function() {
+    var hm = document.createElement("script");
+    hm.src = "https://hm.baidu.com/hm.js?127e6472537f18c08f63f2cef5f65b54";
+    var s = document.getElementsByTagName("script")[0]; 
+    s.parentNode.insertBefore(hm, s);
+  })();
+  </script>
 </body>
 </html>
