--- a/zero/nav/index.html
+++ b/zero/nav/index.html
@@ -73,5 +73,6 @@
     s.parentNode.insertBefore(hm, s);
   })();
   </script>
+  <script src="https://s22.cnzz.com/z_stat.php?id=1263443638&web_id=1263443638" language="JavaScript"></script>
 </body>
 </html>
