--- a/resource/demos/html-nav/index.html
+++ b/resource/demos/html-nav/index.html
@@ -31,6 +31,16 @@
     <li><a href="http://www.luoo.net/">落网</a></li>
     <li><a href="http://weibo.com/">微博</a></li>
   </ul>
+
+  <h2>其他分类</h2>
+  <ul>
+    <li><a href="###">占位，让页面内容超过一屏幕，使点返回顶部有效果。</a></li>
+    <li><a href="###">占位，让页面内容超过一屏幕，使点返回顶部有效果。</a></li>
+    <li><a href="###">占位，让页面内容超过一屏幕，使点返回顶部有效果。</a></li>
+    <li><a href="###">占位，让页面内容超过一屏幕，使点返回顶部有效果。</a></li>
+    <li><a href="###">占位，让页面内容超过一屏幕，使点返回顶部有效果。</a></li>
+    <li><a href="###">占位，让页面内容超过一屏幕，使点返回顶部有效果。</a></li>
+  </ul>
   <a href="#top">返回顶部</a>
 </body>
 </html>
