--- a/resource/demos/meizi/index.html
+++ b/resource/demos/meizi/index.html
@@ -11,8 +11,6 @@
   <div class="imgs">
   </div>
   <script src="https://unpkg.com/jquery@3.2.1"></script>
-  <script src="main.js"> 
-    
-  </script>
+  <script src="main.js"></script>
 </body>
 </html>
