--- a/resource/demos/js/loop/index.html
+++ b/resource/demos/js/loop/index.html
@@ -6,6 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 </head>
 <body>
+  打开控制台看结果
   <script>
     // 遍历数组
     var arr = ['a', 'b', 'c']
