--- a/zero/nav/index.html
+++ b/zero/nav/index.html
@@ -55,7 +55,7 @@
               <li>
                 <a href="https://www.jianshu.com/sign_up" target="_blank">简书账号</a> 用来放总结文章。</li>
               <li>
-                <a href="http://runjs.cn/" target="_blank">RunJS 帐号</a> 或 <a href="https://github.com/join" target="_blank">GitHub账号</a> 用来放代码。对于新手，可以先用 RunJS，以后再学 Git。</li>
+                <a href="https://codepen.io/" target="_blank"> CodePen 帐号</a> 或 <a href="https://github.com/join" target="_blank">GitHub账号</a> 用来放代码。对于新手，可以先用 CodePen，以后再学 Git。</li>
               <li><a href="https://www.wenjuan.com/s/2URrqy/" target="_blank">提交帐号的信息</a></li>
             </ol>
             <h2>下载软件</h2>
