--- a/resource/demos/vue/basic.html
+++ b/resource/demos/vue/basic.html
@@ -60,7 +60,7 @@
      3. 模板语法要会这些
        1. v-if 和 v-show
        2. v-for
-       3. 在属性上输出值
+       3. 在属性上输出值。如果输出的是变量或非字符串类型的值，一定要用绑定语法。
     */
     new Vue({
       // 在 #app 下的
@@ -70,8 +70,8 @@
         name: 'Joel',
         sex: 1,
         hobbys: ['编程','动画','英剧', '瞎折腾'],
-        // job: '前端开发',
-        job: null,
+        job: '前端开发',
+        // job: null,
         time: null
       },
       // 方法必须必须写在 methods 下面
