--- a/resource/demos/vue/event.html
+++ b/resource/demos/vue/event.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -17,6 +18,7 @@
     <p>我被点了 {{clickNum}} 次</p>
 
     <input type="text" @keyup="keyupHandler" v-model="content">
+    <textarea  v-model="content"></textarea>
     <p>用户输入的内容: {{content}}</p>
     <p>用户输入过的内容 {{inputed}}</p>
   </div>
@@ -34,6 +36,7 @@
           this.clickNum++
         },
         keyupHandler: function(event) {
+          console.log(arguments)
           this.inputed += event.key
         }
       }
